[gradle-runner] maven test support for 9+ java